<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_XtsMotorEtherCatDiag" Id="{a7f0d811-fc9b-427f-8b3d-13cbfaad5328}">
    <Declaration><![CDATA[TYPE ST_XtsMotorEtherCatDiag :
STRUCT
	fbSource : FB_TcSourceInfo;
	fbAlarmNotInOpMode : FB_TcAlarm;
	fbAlarmNoCommunication : FB_TcAlarm;
	
	fbGetSlaveState : FB_EcGetSlaveState;
	nLastState : BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>